overflow fixed

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,7 +8,7 @@
 }
 body{
     margin: 0;
-    overflow: clip;
+    background-color: black;
 }
   
 canvas{
